changed magical numbers to const